--- a/Paodreamshop/Index.html
+++ b/Paodreamshop/Index.html
@@ -83,7 +83,7 @@
 					    		</div>
 					    		<div class="info-producto">
 					    			<a class="title-nombre" href="#">Tinta de Labios</a>
-					    			<p class="precio">4.500</p>
+					    			<p class="precio">$4.500</p>
 					    		</div>
 				    		</div>
 						</div>
@@ -184,7 +184,7 @@
 
 		<div class="contenedor-dreams">
 			<div class="titulo tseparador">
-				<div class="separador"><img src="img/separadorR.svg" alt=""></div>
+				<div class="separador"><img src="img/separadorL.svg" alt=""></div>
 				<p>Dreams</p>
 				<div class="separador"><img src="img/separadorR.svg" alt=""></div>
 				
@@ -233,9 +233,7 @@
 	</footer>
 </div>
 
+<script src="Scripts/scrip2.js" ></script>
 
-
-
-<script src="Scripts/Script.js"></script>
 </body>
 </html>
